--- a/quit_smoking.Rmd
+++ b/quit_smoking.Rmd
@@ -12,6 +12,22 @@ output:
 library(tidyverse)
 library(dplyr)
 library(plotly)
+library(viridis)
+
+knitr::opts_chunk$set(
+  echo = TRUE,
+  warning = FALSE,
+  fig.width = 10,
+  fig.height = 6,
+  out.width = "90%"
+)
+options(
+  ggplot2.continuous.colour = "viridis",
+  ggplot2.continuous.fill = "viridis"
+)
+scale_colour_discrete = scale_colour_viridis_d
+scale_fill_discrete = scale_fill_viridis_d
+theme_set(theme_minimal() + theme(legend.position = "right"))
 ```
 
 
@@ -28,9 +44,83 @@ smk_df =
          time_quit = smkqtnp_a) %>%
   select(try_quit, doctor_quit, time_quit) %>% 
   filter(if_any(everything(), ~ !is.na(.)))
-
-  
 ```
+
+Pie charts
+```{r}
+try_quit_plot = 
+  smk_df %>% 
+  select(try_quit) %>% 
+  drop_na() %>% 
+  mutate(
+    try_quit = as.character(try_quit),
+    try_quit = str_replace(try_quit, "1", "Yes"),
+    try_quit = str_replace(try_quit, "2", "No"),
+    try_quit = str_replace(try_quit, "7", "Refused"),
+    try_quit = str_replace(try_quit, "8", "Not Ascertained"),
+    try_quit = str_replace(try_quit, "9", "Don't Know")
+  ) %>% 
+  group_by(try_quit) %>% 
+  count() %>% 
+  plot_ly(labels = ~try_quit, values = ~n, type = "pie",
+          marker = list(colors = c("#9ACD32", "#87CEEB", "#FA8072", 
+                           "#FFFACD", "	#F5DEB3"))) %>% 
+  layout(title = "Are you trying to stop smoking during the past year? ")
+
+try_quit_plot
+```
+
+
+```{r}
+doctor_quit = 
+  smk_df %>% 
+  select(doctor_quit) %>% 
+  drop_na() %>% 
+  mutate(
+    doctor_quit = as.character(doctor_quit),
+    doctor_quit = str_replace(doctor_quit, "1", "Yes"),
+    doctor_quit = str_replace(doctor_quit, "2", "No"),
+    doctor_quit = str_replace(doctor_quit, "7", "Refused"),
+    doctor_quit = str_replace(doctor_quit, "8", "Not Ascertained"),
+    doctor_quit = str_replace(doctor_quit, "9", "Don't Know")
+  ) %>% 
+  group_by(doctor_quit) %>% 
+  count()  %>% 
+  plot_ly(labels = ~doctor_quit, values = ~n, type = "pie",
+              marker = list(colors = c("#9ACD32", "#87CEEB", 
+                           "#11AA22", "#FA8072",	"#F5DEB3"))) %>% 
+  layout(title = "Has a doctor/health professional advised you about 
+         stop smoking in the past year? ")
+
+doctor_quit
+```
+
+
+## Time since quitting smoking
+```{r}
+time_quit_plot = 
+  smk_df %>% 
+  select(time_quit) %>% 
+  mutate(
+    period = cut(time_quit, breaks = seq(0, 365, by = 7))
+  ) %>% 
+  drop_na() %>% 
+  group_by(period) %>% 
+  count() %>% 
+  plot_ly(y = ~n, type = "bar", color = ~n,
+          #add text above the bars
+          text = ~n, textposition = 'auto' ) %>% 
+  layout(title = "Time since quitting (Weeks)", 
+         xaxis = list(title = "Weeks"),
+         yaxis = list(title = "Number of People"))
+  
+time_quit_plot
+```
+
+This bar chart 
+
+
+
 
 
 
