--- a/quit_smoke.Rmd
+++ b/quit_smoke.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Quitsmoking"
+title: "Quit Smoking"
 output: 
   html_document:
     toc: true
@@ -42,37 +42,34 @@ g = list(
 ```{r}
 tax_df = read.csv("data/CDC_STATE_System_Tobacco_Legislation_-_Tax.csv") %>% 
   janitor::clean_names() %>% 
-  select(year, location_abbr:topic_desc, measure_desc, provision_desc, provision_alt_value, data_type, geo_location) %>% 
+  select(year, location_abbr:topic_desc, measure_desc, provision_desc, 
+         provision_alt_value, data_type, geo_location) %>% 
   filter(!(provision_alt_value == 0)) %>% 
   filter(data_type %in% c("Money", "Number")) %>% 
-  distinct()
-
-tax_2021 = tax_df %>% 
+  distinct() %>% 
   filter(year == 2021)
 
-tax_df = tax_df %>% 
-  filter(year >= 2017,
-         year <= 2020) %>% 
-  arrange(desc(year))
 ```
 
-# Cigarette tax by state
+## Cigarette tax by state
 ```{r}
 tax_2021 = tax_df %>% 
-  filter(year == 2021) %>% 
   filter(topic_desc == "Legislation - Tax Combustible Tobacco",
          !(provision_desc == "Percent Value"),
-         measure_desc == "Cigarette") %>% 
+         measure_desc == "Cigarette",
+         !(location_abbr %in% c("PW", "MH", "PR", "GU", "VI", 
+                                "MP", "AS", "DC"))) %>% 
   group_by(location_abbr) %>%
   mutate(location_abbr = reorder(location_abbr, provision_alt_value)) %>% 
-  ggplot(aes(y = reorder(location_abbr, provision_alt_value), x = provision_alt_value)) + 
+  ggplot(aes(y = reorder(location_abbr, provision_alt_value), 
+             x = provision_alt_value, fill = location_abbr)) + 
   geom_col(alpha = 0.5) +
   labs(title = "Cigarette Tax Value by State",
        x = "Tax value ($ per pack)",
        y = "State") +
   theme(axis.text.y = element_text(size = 4.5)) 
 
-tax_2021
+ggplotly(tax_2021)
 ```
 
 ## Quit Smoking Analysis
@@ -90,7 +87,7 @@ smk_df =
   filter(if_any(everything(), ~ !is.na(.)))
 ```
 
-Pie charts
+## Tried Quit Smoking?
 ```{r}
 try_quit_plot = 
   smk_df %>% 
@@ -114,7 +111,7 @@ try_quit_plot =
 try_quit_plot
 ```
 
-
+## Doctors' Advise
 ```{r}
 doctor_quit = 
   smk_df %>% 
@@ -139,6 +136,24 @@ doctor_quit =
 doctor_quit
 ```
 
+## Calls Related to Quit Smoking
+```{r}
+quit_df = read.csv("./data/Quitline_Service_Utilization.csv") 
+
+quit_df %>% 
+  janitor::clean_names() %>% 
+  filter(year == 2020,
+         variable == "Counseling and/or Medications",
+         location_abbr != "US") %>% 
+  mutate(number_of_calls = value / 1000) %>% 
+  select(location_abbr, number_of_calls) %>%
+  plot_geo(locationmode = 'USA-states') %>% 
+  add_trace(z = ~number_of_calls, text = "#Calls", locations = ~location_abbr,
+            color = ~number_of_calls, colors = "Blues") %>% 
+  layout(title = "Number of Quitline Calls for Counseling/Medication per 
+         Tobacco Users in 2020", geo = g)
+```
+
 
 ## Time since quitting smoking
 ```{r}
@@ -159,25 +174,5 @@ time_quit_plot =
          yaxis = list(title = "Number of People"))
   
 time_quit_plot
-```
-
-
-# Test
-```{r}
-quit_df = read.csv("./data/Quitline_Service_Utilization.csv") 
-
-quit_df %>% 
-  janitor::clean_names() %>% 
-  filter(year == 2020,
-         variable == "Counseling and/or Medications",
-         location_abbr != "US") %>% 
-  mutate(number_of_calls = value / 1000) %>% 
-  select(location_abbr, number_of_calls) %>%
-  plot_geo(locationmode = 'USA-states') %>% 
-  add_trace(z = ~number_of_calls, text = "#Calls", locations = ~location_abbr,
-            color = ~number_of_calls, colors = "Blues") %>% 
-  layout(title = "Number of Quitline Calls for Counseling/Medication per 
-         Tobacco Users in 2020", geo = g)
-
 ```
 
