--- a/index.Rmd
+++ b/index.Rmd
@@ -6,7 +6,7 @@ output:
     toc_float: true
     theme: cosmo
 ---
-### Xu Ke, Shipei Zeng, Wanxin Qi, Ziyue Yang, Lesi He
+### Ke Xu, SzePui Tsang, Wanxin Qi, Ziyue Yang, Lesi He
 ## Motivation
 It is known that smoking causes a lot of health problems, but according to the Centers for Disease Control and Prevention (CDC), there were about 34 million U.S. adults smoke cigarettes in 2019, and 58 million nonsmoking people were exposed to secondhand smoke that severely negatively affected their health. Especially since the first laboratory-confirmed case of Covid-19 appeared in the United States on January 20, 2020, bad addictions such as smoking have been highlighted by health groups looking at their relationship with Covid-19. The CDC pointed out that smoking could lead to a higher risk of getting severe illness from Covid-19 whether current smokers or former smokers. With this information, we examined the trend of smoking in the U.S. in recent years.
 
