--- a/index.Rmd
+++ b/index.Rmd
@@ -4,17 +4,37 @@ output:
   html_document:
     toc: true
     toc_float: true
-    theme: cosmo
+    theme: sandstone
 ---
-### Ke Xu, SzePui Tsang, Wanxin Qi, Ziyue Yang, Lesi He
+
+Ke Xu, SzePui Tsang, Wanxin Qi, Ziyue Yang, Lesi He
+
 ## Motivation
-It is known that smoking causes a lot of health problems, but according to the Centers for Disease Control and Prevention (CDC), there were about 34 million U.S. adults smoke cigarettes in 2019, and 58 million nonsmoking people were exposed to secondhand smoke that severely negatively affected their health. Especially since the first laboratory-confirmed case of Covid-19 appeared in the United States on January 20, 2020, bad addictions such as smoking have been highlighted by health groups looking at their relationship with Covid-19. The CDC pointed out that smoking could lead to a higher risk of getting severe illness from Covid-19 whether current smokers or former smokers. With this information, we examined the trend of smoking in the U.S. in recent years.
+
+It is known that smoking causes a lot of health problems, but according to the [Centers for Disease Control and Prevention (CDC)](https://www.cdc.gov/tobacco/about/osh/index.htm), there were about 34 million U.S. adults smoke cigarettes in 2019, and 58 million nonsmoking people were exposed to secondhand smoke that severely negatively affected their health. Especially since the first laboratory-confirmed case of Covid-19 appeared in the United States on January 20, 2020, bad addictions such as smoking have been highlighted by health groups looking at their relationship with Covid-19. The CDC pointed out that smoking could lead to a higher risk of getting severe illness from Covid-19 whether current smokers or former smokers. With this information, we examined the trend of smoking in the U.S. in recent years.
+
+## Screencast
 
 
-## Overview
+## Data
+
+We used several datasets from [the National Health Interview Survey (NHIS)](https://www.cdc.gov/nchs/nhis/index.htm), [the Behavioral Risk Factor Surveillance System](https://www.cdc.gov/brfss/index.html), . More detailed information about the datasets and the cleaning & tidying process can be accessed at [data](data.html).
+
+## Initial Questions
+
+
+## Exploratory Analysis
+
+
+## Statistical Analysis
+
+
+## Overall Findings
+
+
+## Discussion
 
 
 
-## Video Overview
 
 
